@@ -16,12 +16,13 @@
  */
 package org.apache.camel.component.azure.servicebus.integration;
 
+import java.nio.charset.StandardCharsets;
 import java.time.OffsetDateTime;
+import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Spliterator;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import com.azure.messaging.servicebus.ServiceBusReceivedMessage;
@@ -50,7 +51,7 @@ class ServiceBusProducerTest extends BaseCamelServiceBusTestSupport {
     @Test
     public void testSendMessage() throws InterruptedException {
         template.send("direct:sendMessage", exchange -> {
-            exchange.getIn().setBody(123456789);
+            exchange.getIn().setBody("123456789");
             exchange.getIn().setHeader(ServiceBusConstants.APPLICATION_PROPERTIES, Map.of("customKey", "customValue"));
         });
 
@@ -58,7 +59,7 @@ class ServiceBusProducerTest extends BaseCamelServiceBusTestSupport {
 
         // let's check our data
         final List<ServiceBusReceivedMessage> receivedMessages
-                = receiverAsyncClient.receiveMessages().toStream().collect(Collectors.toList());
+                = receiverAsyncClient.receiveMessages().toStream().toList();
 
         final boolean batch1Exists = receivedMessages.stream()
                 .anyMatch(serviceBusReceivedMessage -> serviceBusReceivedMessage.getBody().toString().equals("123456789"));
@@ -69,16 +70,38 @@ class ServiceBusProducerTest extends BaseCamelServiceBusTestSupport {
 
         assertTrue(batch1Exists, "test message body");
         assertTrue(applicationPropertiesPresent, "test message application properties");
+
+        //test byte body
+        byte[] testByteBody = "test data".getBytes(StandardCharsets.UTF_8);
+        template.send("direct:sendMessage", exchange -> {
+            exchange.getIn().setBody(testByteBody);
+            exchange.getIn().setHeader(ServiceBusConstants.APPLICATION_PROPERTIES, Map.of("customKey", "customValue"));
+        });
+
+        Thread.sleep(1000);
+
+        final List<ServiceBusReceivedMessage> receivedMessages2
+                = receiverAsyncClient.receiveMessages().toStream().toList();
+
+        final boolean batch2Exists = receivedMessages2.stream()
+                .anyMatch(serviceBusReceivedMessage -> serviceBusReceivedMessage.getBody().toString().equals("123456789"));
+
+        final boolean applicationPropertiesPresent2 = receivedMessages2.stream()
+                .anyMatch(serviceBusReceivedMessage -> serviceBusReceivedMessage.getApplicationProperties()
+                        .containsKey("customKey"));
+
+        assertTrue(batch2Exists, "test byte body");
+        assertTrue(applicationPropertiesPresent2, "test byte message application properties");
     }
 
     @Test
     public void testSendBatchMessages() throws InterruptedException {
         template.send("direct:sendBatchMessages", exchange -> {
-            final List<Object> inputBatch = new LinkedList<>();
+            final List<String> inputBatch = new LinkedList<>();
             inputBatch.add("test batch 1");
             inputBatch.add("test batch 2");
             inputBatch.add("test batch 3");
-            inputBatch.add(123456);
+            inputBatch.add("123456");
 
             exchange.getIn().setBody(inputBatch);
         });
@@ -105,6 +128,30 @@ class ServiceBusProducerTest extends BaseCamelServiceBusTestSupport {
         assertTrue(batch2Exists, "test message body 2");
         assertTrue(batch3Exists, "test message body 3");
         assertTrue(batch4Exists, "test message body 4");
+
+        //test bytes
+        final List<byte[]> inputBatch2 = new LinkedList<>();
+        byte[] byteBody1 = "test data".getBytes(StandardCharsets.UTF_8);
+        byte[] byteBody2 = "test data2".getBytes(StandardCharsets.UTF_8);
+        inputBatch2.add(byteBody1);
+        inputBatch2.add(byteBody2);
+
+        template.send("direct:sendBatchMessages", exchange -> {
+            exchange.getIn().setBody(inputBatch2);
+        });
+
+        Thread.sleep(1000);
+
+        // let's check our data
+        final Spliterator<ServiceBusReceivedMessage> receivedMessages2
+                = receiverAsyncClient.receiveMessages().toIterable().spliterator();
+        final boolean byteBody1Exists = StreamSupport.stream(receivedMessages2, false)
+                .anyMatch(serviceBusReceivedMessage -> Arrays.equals(serviceBusReceivedMessage.getBody().toBytes(), byteBody1));
+        final boolean byteBody2Exists = StreamSupport.stream(receivedMessages2, false)
+                .anyMatch(serviceBusReceivedMessage -> Arrays.equals(serviceBusReceivedMessage.getBody().toBytes(), byteBody2));
+
+        assertTrue(byteBody1Exists, "test byte body 1");
+        assertTrue(byteBody2Exists, "test byte body 2");
     }
 
     @Test
@@ -124,6 +171,24 @@ class ServiceBusProducerTest extends BaseCamelServiceBusTestSupport {
                 .anyMatch(serviceBusReceivedMessage -> serviceBusReceivedMessage.getBody().toString().equals("test message"));
 
         assertTrue(batch1Exists);
+
+        //test bytes
+        byte[] testByteBody = "test data".getBytes(StandardCharsets.UTF_8);
+        template.send("direct:scheduleMessage", exchange -> {
+            exchange.getIn().setHeader(ServiceBusConstants.SCHEDULED_ENQUEUE_TIME, OffsetDateTime.now());
+            exchange.getIn().setBody(testByteBody);
+        });
+
+        Thread.sleep(1000);
+
+        final Spliterator<ServiceBusReceivedMessage> receivedMessages2
+                = receiverAsyncClient.receiveMessages().toIterable().spliterator();
+
+        final boolean batch2Exists = StreamSupport.stream(receivedMessages2, false)
+                .anyMatch(serviceBusReceivedMessage -> Arrays.equals(serviceBusReceivedMessage.getBody().toBytes(),
+                        testByteBody));
+
+        assertTrue(batch2Exists);
     }
 
     @Test
@@ -133,7 +198,7 @@ class ServiceBusProducerTest extends BaseCamelServiceBusTestSupport {
             inputBatch.add("test batch 1");
             inputBatch.add("test batch 2");
             inputBatch.add("test batch 3");
-            inputBatch.add(123456);
+            inputBatch.add("123456");
 
             exchange.getIn().setHeader(ServiceBusConstants.SCHEDULED_ENQUEUE_TIME, OffsetDateTime.now());
             exchange.getIn().setBody(inputBatch);
@@ -161,6 +226,33 @@ class ServiceBusProducerTest extends BaseCamelServiceBusTestSupport {
         assertTrue(batch2Exists, "test message body 2");
         assertTrue(batch3Exists, "test message body 3");
         assertTrue(batch4Exists, "test message body 4");
+
+        //test bytes
+        final List<byte[]> inputBatch2 = new LinkedList<>();
+        byte[] byteBody1 = "test data".getBytes(StandardCharsets.UTF_8);
+        byte[] byteBody2 = "test data2".getBytes(StandardCharsets.UTF_8);
+        inputBatch2.add(byteBody1);
+        inputBatch2.add(byteBody2);
+
+        template.send("direct:scheduleBatchMessages", exchange -> {
+            exchange.getIn().setHeader(ServiceBusConstants.SCHEDULED_ENQUEUE_TIME, OffsetDateTime.now());
+            exchange.getIn().setBody(inputBatch2);
+        });
+
+        Thread.sleep(1000);
+
+        // let's check our data
+        final Spliterator<ServiceBusReceivedMessage> receivedMessages2
+                = receiverAsyncClient.receiveMessages().toIterable().spliterator();
+
+        final boolean byteBody1Exists = StreamSupport.stream(receivedMessages2, false)
+                .anyMatch(serviceBusReceivedMessage -> Arrays.equals(serviceBusReceivedMessage.getBody().toBytes(), byteBody1));
+
+        final boolean byteBody2Exists = StreamSupport.stream(receivedMessages2, false)
+                .anyMatch(serviceBusReceivedMessage -> Arrays.equals(serviceBusReceivedMessage.getBody().toBytes(), byteBody2));
+
+        assertTrue(byteBody1Exists, "test byte message body 1");
+        assertTrue(byteBody2Exists, "test byte message body 2");
     }
 
     @Override
