@@ -17,7 +17,6 @@
 package org.apache.camel.component.netty.http;
 
 import java.net.URI;
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 
@@ -95,25 +94,9 @@ public class HttpClientInitializerFactory extends ClientInitializerFactory {
 
         pipeline.addLast("http", new HttpClientCodec());
 
-        List<ChannelHandler> encoders = producer.getConfiguration().getEncodersAsList();
-        for (int x = 0; x < encoders.size(); x++) {
-            ChannelHandler encoder = encoders.get(x);
-            if (encoder instanceof ChannelHandlerFactory) {
-                // use the factory to create a new instance of the channel as it may not be shareable
-                encoder = ((ChannelHandlerFactory) encoder).newChannelHandler();
-            }
-            pipeline.addLast("encoder-" + x, encoder);
-        }
+        addToPipeline(producer.getConfiguration().getEncodersAsList(), pipeline, "encoder-");
 
-        List<ChannelHandler> decoders = producer.getConfiguration().getDecodersAsList();
-        for (int x = 0; x < decoders.size(); x++) {
-            ChannelHandler decoder = decoders.get(x);
-            if (decoder instanceof ChannelHandlerFactory) {
-                // use the factory to create a new instance of the channel as it may not be shareable
-                decoder = ((ChannelHandlerFactory) decoder).newChannelHandler();
-            }
-            pipeline.addLast("decoder-" + x, decoder);
-        }
+        addToPipeline(producer.getConfiguration().getDecodersAsList(), pipeline, "decoder-");
         if (configuration.isDisableStreamCache()) {
             pipeline.addLast("inbound-streamer", new HttpInboundStreamHandler());
         }
@@ -133,6 +116,17 @@ public class HttpClientInitializerFactory extends ClientInitializerFactory {
         pipeline.addLast("handler", new HttpClientChannelHandler(producer));
     }
 
+    private void addToPipeline(List<ChannelHandler> handlers, ChannelPipeline pipeline, String prefix) {
+        for (int x = 0; x < handlers.size(); x++) {
+            ChannelHandler handler = handlers.get(x);
+            if (handler instanceof ChannelHandlerFactory) {
+                // use the factory to create a new instance of the channel as it may not be shareable
+                handler = ((ChannelHandlerFactory) handler).newChannelHandler();
+            }
+            pipeline.addLast(prefix + x, handler);
+        }
+    }
+
     private SSLContext createSSLContext(NettyProducer producer) throws Exception {
         NettyConfiguration configuration = producer.getConfiguration();
 
@@ -150,15 +144,7 @@ public class HttpClientInitializerFactory extends ClientInitializerFactory {
                 sniServerNames = answer.getSupportedSSLParameters().getServerNames();
             }
         } else {
-            if (configuration.getKeyStoreFile() == null && configuration.getKeyStoreResource() == null) {
-                LOG.debug("keystorefile is null");
-            }
-            if (configuration.getTrustStoreFile() == null && configuration.getTrustStoreResource() == null) {
-                LOG.debug("truststorefile is null");
-            }
-            if (configuration.getPassphrase() == null) {
-                LOG.debug("passphrase is null");
-            }
+            InitializerHelper.logConfiguration(configuration);
             char[] pw = configuration.getPassphrase() != null ? configuration.getPassphrase().toCharArray() : null;
 
             SSLEngineFactory sslEngineFactory;
@@ -199,7 +185,7 @@ public class HttpClientInitializerFactory extends ClientInitializerFactory {
             engine.setUseClientMode(true);
             SSLParameters sslParameters = engine.getSSLParameters();
             sslParameters
-                    .setServerNames(sniServerNames != null ? sniServerNames : Arrays.asList(new SNIHostName(uri.getHost())));
+                    .setServerNames(sniServerNames != null ? sniServerNames : List.of(new SNIHostName(uri.getHost())));
             engine.setSSLParameters(sslParameters);
             if (producer.getConfiguration().getSslContextParameters() == null) {
                 // just set the enabledProtocols if the SslContextParameter doesn't set
