@@ -21,6 +21,7 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.StringJoiner;
+import java.util.TreeMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -35,7 +36,10 @@ import org.apache.camel.model.Model;
 import org.apache.camel.model.app.RegistryBeanDefinition;
 import org.apache.camel.spi.Resource;
 import org.apache.camel.spi.ResourceLoader;
+import org.apache.camel.support.ObjectHelper;
+import org.apache.camel.support.PluginHelper;
 import org.apache.camel.support.PropertyBindingSupport;
+import org.apache.camel.util.KeyValueHolder;
 import org.apache.camel.util.StringHelper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -54,6 +58,16 @@ public class BlueprintXmlBeansHandler {
     private final Map<String, Node> delayedBeans = new LinkedHashMap<>();
     private final Map<String, Resource> resources = new LinkedHashMap<>();
     private final List<RegistryBeanDefinition> delayedRegistrations = new ArrayList<>();
+    private final Map<String, KeyValueHolder<Object, String>> beansToDestroy = new LinkedHashMap<>();
+    private boolean transform;
+
+    public boolean isTransform() {
+        return transform;
+    }
+
+    public void setTransform(boolean transform) {
+        this.transform = transform;
+    }
 
     /**
      * Parses the XML documents and discovers blueprint beans, which will be created manually via Camel.
@@ -85,15 +99,21 @@ public class BlueprintXmlBeansHandler {
             String id = entry.getKey();
             Node n = entry.getValue();
             RegistryBeanDefinition def = createBeanModel(camelContext, id, n);
-            LOG.debug("Creating bean: {}", def.getName());
-            registerBeanDefinition(camelContext, def, true);
+            if (transform) {
+                // transform mode should only discover and remember bean in model
+                LOG.debug("Discovered bean: {}", def.getName());
+                addBeanToCamelModel(camelContext, def.getName(), def);
+            } else {
+                LOG.debug("Creating bean: {}", def.getName());
+                registerAndCreateBean(camelContext, def, true);
+            }
         }
 
         if (!delayedRegistrations.isEmpty()) {
             // some of the beans were not available yet, so we have to try register them now
             for (RegistryBeanDefinition def : delayedRegistrations) {
                 LOG.debug("Creating bean (2nd-try): {}", def.getName());
-                registerBeanDefinition(camelContext, def, false);
+                registerAndCreateBean(camelContext, def, false);
             }
             delayedRegistrations.clear();
         }
@@ -106,9 +126,28 @@ public class BlueprintXmlBeansHandler {
         rrd.setType(XmlHelper.getAttribute(node, "class"));
         rrd.setName(name);
 
+        // factory bean/method
+        String fb = XmlHelper.getAttribute(node, "factory-ref");
+        if (fb != null) {
+            rrd.setFactoryBean(fb);
+        }
+        String fm = XmlHelper.getAttribute(node, "factory-method");
+        if (fm != null) {
+            rrd.setFactoryMethod(fm);
+        }
+        String im = XmlHelper.getAttribute(node, "init-method");
+        if (im != null) {
+            rrd.setInitMethod(im);
+        }
+        String dm = XmlHelper.getAttribute(node, "destroy-method");
+        if (dm != null) {
+            rrd.setDestroyMethod(dm);
+        }
         // constructor arguments
-        StringJoiner sj = new StringJoiner(", ");
+        Map<Integer, Object> constructors = new LinkedHashMap<>();
+        rrd.setConstructors(constructors);
         NodeList props = node.getChildNodes();
+        int index = 0;
         for (int i = 0; i < props.getLength(); i++) {
             Node child = props.item(i);
             // assume the args are in order (1, 2)
@@ -116,14 +155,14 @@ public class BlueprintXmlBeansHandler {
                 String val = XmlHelper.getAttribute(child, "value");
                 String ref = XmlHelper.getAttribute(child, "ref");
                 if (val != null) {
-                    sj.add("'" + extractValue(camelContext, val, false) + "'");
+                    constructors.put(index++, extractValue(camelContext, val, false));
                 } else if (ref != null) {
-                    sj.add("'#bean:" + extractValue(camelContext, ref, false) + "'");
+                    constructors.put(index++, "#bean:" + extractValue(camelContext, ref, false));
                 }
             }
         }
-        if (sj.length() > 0) {
-            rrd.setType("#class:" + rrd.getType() + "(" + sj + ")");
+        if (!constructors.isEmpty()) {
+            rrd.setConstructors(constructors);
         }
 
         // property values
@@ -136,12 +175,31 @@ public class BlueprintXmlBeansHandler {
                 String key = XmlHelper.getAttribute(child, "name");
                 String val = XmlHelper.getAttribute(child, "value");
                 String ref = XmlHelper.getAttribute(child, "ref");
-
-                // TODO: List/Map properties
                 if (key != null && val != null) {
                     properties.put(key, extractValue(camelContext, val, false));
                 } else if (key != null && ref != null) {
                     properties.put(key, extractValue(camelContext, "#bean:" + ref, false));
+                }
+                for (Node n : getChildNodes(child, "list")) {
+                    int j = 0;
+                    for (Node v : getChildNodes(n, "value")) {
+                        val = v.getTextContent();
+                        if (key != null && val != null) {
+                            String k = key + "[" + j + "]";
+                            properties.put(k, extractValue(camelContext, val, false));
+                        }
+                        j++;
+                    }
+                }
+                for (Node n : getChildNodes(child, "map")) {
+                    for (Node v : getChildNodes(n, "entry")) {
+                        String k = XmlHelper.getAttribute(v, "key");
+                        val = XmlHelper.getAttribute(v, "value");
+                        if (key != null && k != null && val != null) {
+                            k = key + "[" + k + "]";
+                            properties.put(k, extractValue(camelContext, val, false));
+                        }
+                    }
                 }
             }
         }
@@ -150,6 +208,18 @@ public class BlueprintXmlBeansHandler {
         }
 
         return rrd;
+    }
+
+    private static List<Node> getChildNodes(Node node, String name) {
+        List<Node> answer = new ArrayList<>();
+        NodeList list = node.getChildNodes();
+        for (int j = 0; j < list.getLength(); j++) {
+            Node entry = list.item(j);
+            if (name.equals(entry.getNodeName())) {
+                answer.add(entry);
+            }
+        }
+        return answer;
     }
 
     private void discoverBeans(CamelContext camelContext, String fileName, Document dom) {
@@ -191,10 +261,10 @@ public class BlueprintXmlBeansHandler {
     /**
      * Try to instantiate bean from the definition.
      */
-    private void registerBeanDefinition(CamelContext camelContext, RegistryBeanDefinition def, boolean delayIfFailed) {
+    private void registerAndCreateBean(CamelContext camelContext, RegistryBeanDefinition def, boolean delayIfFailed) {
         String type = def.getType();
         String name = def.getName();
-        if (name == null || name.trim().isEmpty()) {
+        if (name == null || name.isBlank()) {
             name = type;
         }
         if (type != null) {
@@ -202,26 +272,100 @@ public class BlueprintXmlBeansHandler {
                 type = "#class:" + type;
             }
             try {
+                // factory bean/method
+                if (def.getFactoryBean() != null && def.getFactoryMethod() != null) {
+                    type = type + "#" + def.getFactoryBean() + ":" + def.getFactoryMethod();
+                } else if (def.getFactoryMethod() != null) {
+                    type = type + "#" + def.getFactoryMethod();
+                }
+                // property binding support has constructor arguments as part of the type
+                StringJoiner ctr = new StringJoiner(", ");
+                if (def.getConstructors() != null && !def.getConstructors().isEmpty()) {
+                    // need to sort constructor args based on index position
+                    Map<Integer, Object> sorted = new TreeMap<>(def.getConstructors());
+                    for (Object val : sorted.values()) {
+                        String text = val.toString();
+                        if (!StringHelper.isQuoted(text)) {
+                            text = "\"" + text + "\"";
+                        }
+                        ctr.add(text);
+                    }
+                    type = type + "(" + ctr + ")";
+                }
+
                 final Object target = PropertyBindingSupport.resolveBean(camelContext, type);
 
                 if (def.getProperties() != null && !def.getProperties().isEmpty()) {
                     PropertyBindingSupport.setPropertiesOnTarget(camelContext, target, def.getProperties());
                 }
-                camelContext.getRegistry().unbind(name);
-                camelContext.getRegistry().bind(name, target);
 
-                // register bean in model
-                Model model = camelContext.getCamelContextExtension().getContextPlugin(Model.class);
-                model.addRegistryBean(def);
+                bindBean(camelContext, def, name, target);
 
             } catch (Exception e) {
                 if (delayIfFailed) {
                     delayedRegistrations.add(def);
                 } else {
+                    boolean ignore = PluginHelper.getRoutesLoader(camelContext).isIgnoreLoadingError();
+                    if (ignore) {
+                        // still add bean if we are ignore loading as we want to know about all beans if possible
+                        addBeanToCamelModel(camelContext, name, def);
+                    }
                     LOG.warn("Error creating bean: {} due to: {}. This exception is ignored.", type, e.getMessage(), e);
                 }
             }
         }
+    }
+
+    protected void bindBean(CamelContext camelContext, RegistryBeanDefinition def, String name, Object target)
+            throws Exception {
+        // destroy and unbind any existing bean
+        destroyBean(name, true);
+        camelContext.getRegistry().unbind(name);
+
+        // invoke init method and register bean
+        String initMethod = def.getInitMethod();
+        if (initMethod != null) {
+            ObjectHelper.invokeMethodSafe(initMethod, target);
+        }
+        camelContext.getRegistry().bind(name, target);
+
+        // remember to destroy bean on shutdown
+        if (def.getDestroyMethod() != null) {
+            beansToDestroy.put(name, new KeyValueHolder<>(target, def.getDestroyMethod()));
+        }
+
+        addBeanToCamelModel(camelContext, name, def);
+    }
+
+    protected void addBeanToCamelModel(CamelContext camelContext, String name, RegistryBeanDefinition def) {
+        // register bean in model
+        Model model = camelContext.getCamelContextExtension().getContextPlugin(Model.class);
+        if (model != null) {
+            LOG.debug("Adding OSGi <blueprint> XML bean: {} to DSL model", name);
+            model.addRegistryBean(def);
+        }
+    }
+
+    protected void destroyBean(String name, boolean remove) {
+        var holder = remove ? beansToDestroy.remove(name) : beansToDestroy.get(name);
+        if (holder != null) {
+            String destroyMethod = holder.getValue();
+            Object target = holder.getKey();
+            try {
+                ObjectHelper.invokeMethodSafe(destroyMethod, target);
+            } catch (Exception e) {
+                LOG.warn("Error invoking destroy method: {} on bean: {} due to: {}. This exception is ignored.",
+                        destroyMethod, target, e.getMessage(), e);
+            }
+        }
+    }
+
+    public void stop() {
+        // beans should trigger destroy methods on shutdown
+        for (String name : beansToDestroy.keySet()) {
+            destroyBean(name, false);
+        }
+        beansToDestroy.clear();
     }
 
 }
